fixed wrapping for table cell

--- a/server/src/main/resources/static/css/styles.css
+++ b/server/src/main/resources/static/css/styles.css
@@ -251,6 +251,7 @@ tbody tr {
 
 tbody td {
   border: 1px solid lightgray;
+  word-wrap: break-word;
 }
 
 html > body thead {
